config-kwin.h.cmake
@@ -18,6 +18,7 @@
 #cmakedefine01 HAVE_WAYLAND_EGL
 #cmakedefine01 HAVE_SYS_PRCTL_H
 #cmakedefine01 HAVE_PR_SET_DUMPABLE
+#cmakedefine01 HAVE_PR_SET_PDEATHSIG
 #cmakedefine01 HAVE_SYS_PROCCTL_H
 #cmakedefine01 HAVE_PROC_TRACE_CTL
 #cmakedefine01 HAVE_BREEZE_DECO
